Fix row spacing and add bullet boxes

--- a/site/wp-content/themes/marketplacelive-theme/assets/styles/layouts/_header.scss
+++ b/site/wp-content/themes/marketplacelive-theme/assets/styles/layouts/_header.scss
@@ -402,8 +402,8 @@
 .home {
   .rect-red {
     width: 290px;
-    top: 79%;
-    left: -8%;
+    top: 82%;
+    left: -7%;
     @include centerer;
   }
 }
