--- a/site/wp-content/themes/marketplacelive-theme/assets/styles/layouts/_pages.scss
+++ b/site/wp-content/themes/marketplacelive-theme/assets/styles/layouts/_pages.scss
@@ -47,7 +47,7 @@ blockquote {
   }
   .right-text {
     h2 {
-      color: $smalt-blue;
+      color: $froly;
       line-height: 1.2;
       font-weight: 100;
       &> strong,
@@ -57,8 +57,9 @@ blockquote {
       }
     }
   }
+  .left-text {
     h2 {
-      color: $froly;
+      color: $smalt-blue;
       &> p {
         font-weight: 100;
         &> strong {
@@ -67,6 +68,8 @@ blockquote {
         }
       }
     }
+  }
+
 
   .right-text,
   .left-text {
@@ -282,6 +285,131 @@ blockquote {
   }
 }
 
+.description {
+  ul {
+    list-style: square outside url('../images/bullet.png');
+  }
+}
+
+
+// Row Spacing Accomodations
+
+// main
+.home {
+  .main-content-row {
+    .left-text {
+      h2 {
+        color: $froly;
+      }
+    }
+    .right-text {
+      h2 {
+        color: $smalt-blue;
+      }
+    }
+  }
+  .custom1 {
+    float: left;
+    margin: 175px 0 0;
+    .text-wrapper {
+      margin: -84px 0  0;
+    }
+  }
+  .custom2 {
+    margin: 150px 0 200px;
+  }
+  .custom3 {
+    .ext-wrapper {
+      margin-top: -57px;
+    }
+  }
+}
+
+// why attend
+.why-attend {
+  .custom3 {
+    //adjusts row down away from previous row to match layout
+    margin-top: 100px;
+    .text-wrapper {
+      margin-top: -20px;
+    }
+  }
+}
+
+// venue
+.venue {
+  .custom1 {
+    .text-wrapper {
+      margin: 80px 0 60px;
+    }
+  }
+  .custom2 {
+    .description {
+      margin-top: 0;
+    }
+    .left-text {
+      margin-bottom: 150px;
+    }
+  }
+}
+// exhibitors
+.exhibitors {
+  .main-content-row {
+    .left-text {
+      h2 {
+        color: $froly;
+      }
+    }
+    .right-text {
+      h2 {
+        color: $smalt-blue;
+      }
+    }
+  }
+  .custom2 {
+    margin-top: 100px 0 -55px;
+  }
+  .custom3 {
+    .text-wrapper {
+      margin-top: 135px;
+    }
+  }
+}
+// sponsors
+.sponsors {
+  .left-text,
+  .right-text {
+    h2 {
+      color: $froly;
+    }
+  }
+  .custom1 {
+    float: left;
+    margin: 100px 0 30px;
+  }
+  .custom2 {
+    .text-wrapper {
+      margin-top: -20px;
+    }
+    .right-text {
+      .description {
+        margin-top: 30px;
+      }
+    }
+  }
+  .custom3 {
+    margin: -30px 0 100px;
+  }
+}
+
+// connect
+.connect {
+  .custom5 {
+    margin-bottom: 100px;
+  }
+}
+
+
 @media (min-width: $screen-xs-min) { // min-width 480
 }
 
@@ -339,6 +467,7 @@ blockquote {
     }
     .right-text {
       width: 100%;
+
     }
 
     &.left-img {
